# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Modules"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-modules"
publish = true
repository.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
opentalk-roomserver-module-automod.workspace = true
opentalk-roomserver-module-chat.workspace = true
opentalk-roomserver-module-e2ee.workspace = true
opentalk-roomserver-module-echo.workspace = true
opentalk-roomserver-module-legal-vote.workspace = true
opentalk-roomserver-module-livekit.workspace = true
opentalk-roomserver-module-meeting-notes.workspace = true
opentalk-roomserver-module-meeting-report.workspace = true
opentalk-roomserver-module-moderation.workspace = true
opentalk-roomserver-module-polls.workspace = true
opentalk-roomserver-module-raise-hands.workspace = true
opentalk-roomserver-module-recording.workspace = true
opentalk-roomserver-module-shared-folder.workspace = true
opentalk-roomserver-module-subroom-audio.workspace = true
opentalk-roomserver-module-timer.workspace = true
opentalk-roomserver-module-training-participation-report.workspace = true
opentalk-roomserver-module-whiteboard.workspace = true
opentalk-roomserver-room.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-automod.workspace = true
opentalk-roomserver-types-chat.workspace = true
opentalk-roomserver-types-e2ee.workspace = true
opentalk-roomserver-types-echo.workspace = true
opentalk-roomserver-types-legal-vote.workspace = true
opentalk-roomserver-types-livekit.workspace = true
opentalk-roomserver-types-meeting-notes.workspace = true
opentalk-roomserver-types-meeting-report.workspace = true
opentalk-roomserver-types-moderation.workspace = true
opentalk-roomserver-types-polls.workspace = true
opentalk-roomserver-types-raise-hands.workspace = true
opentalk-roomserver-types-recording.workspace = true
opentalk-roomserver-types-shared-folder.workspace = true
opentalk-roomserver-types-subroom-audio.workspace = true
opentalk-roomserver-types-timer.workspace = true
opentalk-roomserver-types-training-participation-report.workspace = true
opentalk-roomserver-types-whiteboard.workspace = true
opentalk-types-common.workspace = true

[lints]
workspace = true
