# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk RoomServer report generation"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-report-generation"
repository.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz.workspace = true
ecow.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
typst.workspace = true
typst-kit = { workspace = true, default-features = false, features = [
  "embed-fonts",
] }
typst-pdf.workspace = true

[dev-dependencies]
serde_json.workspace = true
