# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Room"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-room"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
futures.workspace = true
icu_locid = { workspace = true, optional = true }
json-patch.workspace = true
opentalk-roomserver-common.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-web-api.workspace = true
opentalk-service-auth.workspace = true
opentalk-types-api-v1.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling = { workspace = true, features = ["rand"] }
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "signal"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, optional = true }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
bytes.workspace = true
insta = { workspace = true, features = ["json", "redactions"] }
mockito.workspace = true
pretty_assertions.workspace = true
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-util.workspace = true

[features]
mock = ["dep:icu_locid", "dep:tokio-util"]
