# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "Opentalk RoomServer Types"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive_more.workspace = true
opentalk-types-common = { workspace = true, features = ["rand"] }
opentalk-types-signaling = { workspace = true, features = ["utoipa"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, features = [
  "chrono",
  "url",
  "uuid",
], optional = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true

[features]
default = []
utoipa = ["dep:utoipa"]

[package.metadata.cargo-machete]
ignored = ["opentalk-roomserver-signaling"]
