# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-web-api"
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
futures.workspace = true
log.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-api-v1 = { workspace = true, features = ["axum", "http"] }
opentalk-types-common.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
utoipa.workspace = true
