# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
default-run = "opentalk-roomserver"
description = "OpenTalk RoomServer"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
clap.workspace = true
futures.workspace = true
opentalk-roomserver-common.workspace = true
opentalk-roomserver-module-chat.workspace = true
opentalk-roomserver-module-e2ee.workspace = true
opentalk-roomserver-module-livekit.workspace = true
opentalk-roomserver-module-ping.workspace = true
opentalk-roomserver-module-polls.workspace = true
opentalk-roomserver-module-shared-folder.workspace = true
opentalk-roomserver-module-timer.workspace = true
opentalk-roomserver-room.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-web-api.workspace = true
opentalk-types-api-v1 = { workspace = true, features = ["utoipa"] }
opentalk-types-common.workspace = true
opentalk-version.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
service-probe.workspace = true
tokio = { workspace = true, features = ["rt", "signal"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid = { workspace = true, features = ["v4"] }
yaml-rust2.workspace = true

[dev-dependencies]
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
opentalk-types-signaling.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[build-dependencies]
anyhow.workspace = true
opentalk-version.workspace = true
vergen.workspace = true
vergen-gix.workspace = true

[package.metadata.cargo-machete]
ignored = ["vergen", "vergen-gix"]
