# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
default-run = "opentalk-roomserver"
description = "OpenTalk RoomServer"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver"
publish = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
cidr.workspace = true
clap.workspace = true
futures.workspace = true
jsonwebtoken = { workspace = true, features = ["aws-lc-rs"] }
opentalk-orchestrator-client.workspace = true
opentalk-roomserver-common.workspace = true
opentalk-roomserver-modules.workspace = true
opentalk-roomserver-room.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-web-api.workspace = true
opentalk-types-api-v1 = { workspace = true, features = ["utoipa"] }
opentalk-types-common.workspace = true
opentalk-version.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rustls = { workspace = true, features = ["aws-lc-rs"] }
service-probe.workspace = true
service-probe-client.workspace = true
tokio = { workspace = true, features = ["rt", "signal"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid = { workspace = true, features = ["v4"] }
yaml-rust2.workspace = true

[dev-dependencies]
icu_locid.workspace = true
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pretty_assertions.workspace = true
reqwest.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[build-dependencies]
anyhow.workspace = true
opentalk-version.workspace = true
