# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
name = "opentalk-web-api"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
opentalk-types.workspace = true
serde.workspace = true
tracing.workspace = true
