# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-chat"
repository.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-chat.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
opentalk-types-signaling-chat = { workspace = true, features = [
  "rand",
  "serde",
] }
serde.workspace = true

[dev-dependencies]
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pretty_assertions.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
