# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-timer"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-timer.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
opentalk-types-signaling-timer.workspace = true
tokio.workspace = true
