# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types-chat"
repository.workspace = true
version.workspace = true

[dependencies]
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
opentalk-types-signaling-chat = { workspace = true, features = [
  "rand",
  "serde",
] }
serde.workspace = true

[dev-dependencies]
chrono.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
