# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk chat module in the roomserver"
documentation = "https://docs.rs/opentalk-roomserver-types-chat"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types-chat"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
backend = [
  "opentalk-types-common/backend",
  "opentalk-types-signaling/backend",
  "rand",
]
frontend = [
  "opentalk-types-common/frontend",
  "opentalk-types-signaling/frontend",
]
rand = [
  "opentalk-types-common/rand",
  "opentalk-types-signaling/rand",
  "uuid/v4",
]

[dependencies]
derive_more = { workspace = true, features = [
  "as_ref",
  "display",
  "from",
  "from_str",
  "into",
] }
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common = { workspace = true, features = ["serde"] }
opentalk-types-signaling = { workspace = true, features = ["serde"] }
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
