# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "Opentalk RoomServer E2EE Types"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types-e2ee"
repository.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
