# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Module Echo"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-echo"
publish = true
repository.workspace = true
version = "0.2.0"

[lints]
workspace = true

[dependencies]
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-echo.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
tokio.workspace = true

[dev-dependencies]
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pretty_assertions.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
