# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Types Echo"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types-echo"
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
opentalk-roomserver-signaling.workspace = true
opentalk-types-common.workspace = true
serde.workspace = true
