# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Module Excalidraw"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-excalidraw"
publish = false
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-excalidraw.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pretty_assertions.workspace = true
test-log.workspace = true
tokio.workspace = true
