# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Module Legal Vote"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-legal-vote"
publish = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
icu_locid.workspace = true
opentalk-report-generation.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-legal-vote.workspace = true
opentalk-types-api-internal.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["filters", "json", "redactions"] }
opentalk-roomserver-common.workspace = true
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pdf-extract.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
