# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Types Legal Vote"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-types-legal-vote"
repository.workspace = true
version.workspace = true

[dependencies]
basen.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
derive_more.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
