# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-mocking-livekit"
publish = false
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
livekit.workspace = true
opentalk-roomserver-module-livekit.workspace = true
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
opentalk-roomserver-types-livekit.workspace = true
opentalk-types-common.workspace = true
testcontainers.workspace = true
tokio.workspace = true
tracing.workspace = true
